[package]
name = "hnsw_rs"
version = "0.3.4"
authors = ["jeanpierre.both@gmail.com"]
description = "Ann based on Hierarchical Navigable Small World Graphs from Yu.A. Malkov and D.A Yashunin"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["algorithms", "ann", "hnsw"]
repository = "https://github.com/jean-pierreBoth/hnswlib-rs"
documentation = "https://docs.rs/hnsw_rs"
edition = "2024"


# declare a feature with no dependancy to get some modulated debug print
# to be run with cargo build --features verbose_1
#verbose_1 = [ ]

[profile.release]
lto = true
opt-level = 3

[lib]
# cargo rustc --lib -- --crate-type cdylib [or staticlib] or rlib (default)
# if we want to avoid specifying in advance crate-type 
path = "src/lib.rs"
#crate-type = ["cdylib"]


[[example]]
name = "random"
path = "examples/random.rs"


[[example]]
name = "ann-glove"
path = "examples/ann-glove25-angular.rs"


[[example]]
name = "ann-mnist"
path = "examples/ann-mnist-784-euclidean.rs"

[[example]]
name = "ann-sift1m"
path = "examples/ann-sift1m-128-euclidean.rs"

[[example]]
name = "levenshtein"
path = "examples/levensthein.rs"


[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#

serde = { version = "1.0", features = ["derive"] }

cfg-if = { version = "1.0" }

# for //
parking_lot = "0.12"
rayon = { version = "1.11" }
num_cpus = { version = "1.16" }

num-traits = { version = "0.2" }


#  for hashing . hashbrown still needed beccause of get_key_value(&key)
hashbrown = { version = "0.15" }
indexmap = { version = ">= 2.11" }

rand = { version = "0.9" }

#
mmap-rs = { version = "0.7" }
#
# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
log = { version = "0.4" }

anyhow = { version = "1.0" }

# anndists = { path = "../anndists" }
anndists = { version = "0.1" }
# anndists = { git = "https://github.com/jean-pierreBoth/anndists" }

# for benchmark reading, so the lbrary do not depend on hdf5 nor ndarray
[dev-dependencies]
# hdf5 = { version = "0.8" }
# metno is needed as hdf5 is blocked to hdfsys 1.12
hdf5 = {package = "hdf5-metno", version = "0.12" }

ndarray = { version = ">=0.16.0, <0.18" }
skiplist = { version = "0.6" }
tempfile = { version = "3" }
itertools = {version = "0.14"}
env_logger = { version = "0.11" }
cpu-time = { version = "1.0" }

[features]

default = []

# feature for std simd on nightly
stdsimd = ["anndists/stdsimd"]
# feature for simd on stable for x86*
simdeez_f = ["anndists/simdeez_f"]
